last commit, fixed notification and comunication with JS

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.punarinta.RNSoundLevel">
-          <application>
-            <service android:name="SOUNDLEVEL" />
-          </application>
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+    <application>
+        <service android:name="com.punarinta.RNSoundLevel.RNSoundLevelService"/>
+        <receiver android:name=".RNSoundLevelModule$LocalBroadcastReceiver"  android:exported="true">
+            <intent-filter>
+                <action android:name="toModule"/>
+            </intent-filter>
+        </receiver>
+    </application>
 </manifest>
